commit tree 54f46b77010c93127544825073f09b6f230dc816

--- a/index.html
+++ b/index.html
@@ -8,5 +8,17 @@
   </head>
   <body>
     <!-- Your code here -->
-  </body>
+    <img
+      src="https://media.licdn.com/dms/image/C4E03AQEDodjWDN8xvw/profile-displayphoto-shrink_800_800/0/1517688137546?e=1679529600&v=beta&t=yj9ZzeU9ZOKMySBR14MgeEiVLch9iue8S8PeMSc9xe0"
+    />
+    <img
+      src="https://media.licdn.com/dms/image/C4E03AQEDodjWDN8xvw/profile-displayphoto-shrink_800_800/0/1517688137546?e=1679529600&v=beta&t=yj9ZzeU9ZOKMySBR14MgeEiVLch9iue8S8PeMSc9xe0"
+      alt="Derek Smyth's profile pic"
+      />
+    <img
+      src="https://media.licdn.com/dms/image/C4E03AQEDodjWDN8xvw/profile-displayphoto-shrink_800_800/0/1517688137546?e=1679529600&v=beta&t=yj9ZzeU9ZOKMySBR14MgeEiVLch9iue8S8PeMSc9xe0"
+      alt="Derek Smyth's profile pic"
+      title="Derek Smyth"
+    />
+    </body>
 </html>
